# Backoff-Algorithms

./: README.md
BackoffSimulator/: CMakeLists.txt  SimulationClass.cpp  SimulationClass.h  SimulatorMainClass.cpp  simulation_datas.txt
BackoffSimulator/Backoff options/: AdditiveBackoff.cpp  AdditiveBackoff.h  BinaryExponentialBackoff.cpp  BinaryExponentialBackoff.h  ConstantBackoff.cpp  ConstantBackoff.h  LogarithmicBackoff.cpp  LogarithmicBackoff.h  NodeClass.cpp  NodeClass.h  StaticSimulationClass.cpp  StaticSimulationClass.h
